# crypto-sentiment-analysis

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: coingecko_dag  coingecko_dag.py  coingecko_silver_dag.py  dbt_run_dag.py  newapi_BQ_Silver_dag.py  newapi_dag.py  newsapi_dag.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/crypto_dbt_project/gold/: dim_crypto_coin.sql  dim_crypto_news_sources.sql  dim_date.sql  fact_crypto_news_articles.sql  fact_crypto_prices.sql  fact_crypto_sentiment.sql
dbt/models/crypto_dbt_project/staging/: sources.yml
docker/: Dockerfile.airflow  Dockerfile.streamlit  entrypoint.sh
notebooks/: fetch_coingecko.py  news_api_btc_raw.py  test_textblob.py
scripts/: entrypoint.sh
streamlit/: streamlit_app.py
