[tool.poetry]
name = "crypto-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Andrew Bakos <andrew@romutrechtregion.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^2.10.5"
dbt-bigquery = "^1.9.1"
streamlit = "^1.42.1"
google-cloud-bigquery = "^3.29.0"
requests = "^2.32.3"
pandas = "^2.2.3"
textblob = "^0.19.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
